force-app/main/default/objects/Illumina_Service_Batches__c/Illumina_Service_Batches__c.object-meta.xml
<CustomObject>
    <label>Illumina Service Batches</label>
    <nameField>
        <label>CGLS Batch</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Illumina Service Batches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>