force-app/main/default/objects/Illumina_Service_Batches__c/fields/Batch_Status__c.field-meta.xml
<CustomField>
    <fullName>Batch_Status__c</fullName>
    <description>Drop-down menu containing possible Batch status fields</description>
    <label>Batch Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Queued for Extraction</fullName>
            </value>
            <value>
                <fullName>Queued for Quant</fullName>
            </value>
            <value>
                <fullName>Queued for BC</fullName>
            </value>
            <value>
                <fullName>Queued for GT</fullName>
            </value>
            <value>
                <fullName>Requeued</fullName>
            </value>
            <value>
                <fullName>All Samples Completed</fullName>
            </value>
            <value>
                <fullName>Gentrained</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>