force-app/main/default/objects/Illumina_Service_Batches__c/fields/Chip_Family_Name__c.field-meta.xml
<CustomField>
    <fullName>Chip_Family_Name__c</fullName>
    <description>Is used for grouping the chips into a family. Will be updated manually and consumed in reports.</description>
    <label>Chip Family Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>