force-app/main/default/objects/Illumina_Service_Batches__c/fields/Chip_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Chip_Request_Date__c</fullName>
    <description>Date that genotyping chip was requested from manufacturing</description>
    <label>Chip Request Date</label>
    <type>Date</type>
</CustomField>