force-app/main/default/objects/Illumina_Service_Batches__c/fields/P2_of_Units_Failed__c.field-meta.xml
<CustomField>
    <fullName>P2_of_Units_Failed__c</fullName>
    <description>Number of failed units of Unique Part Number in that batch submission</description>
    <label>P2 - # of Units Failed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>