force-app/main/default/objects/Illumina_Service_Batches__c/fields/P4_of_Units_Received__c.field-meta.xml
<CustomField>
    <fullName>P4_of_Units_Received__c</fullName>
    <description>Number of consumed units of Unique Part Number in that batch submission</description>
    <label>P4 - # of Units Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>