force-app/main/default/objects/Illumina_Service_Batches__c/fields/Placeholder_Chip__c.field-meta.xml
<CustomField>
    <fullName>Placeholder_Chip__c</fullName>
    <description>This field is used by FTS  to track any Presale chips team is working on. This will be manually updated by the FTS team for each project entry.</description>
    <label>Placeholder Chip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>