force-app/main/default/objects/Illumina_Service_Batches__c/recordTypes/FTC.recordType-meta.xml
<RecordType>
    <fullName>FTC</fullName>
    <active>false</active>
    <label>FTC</label>
</RecordType>