force-app/main/default/objects/Illumina_Service_Batches__c/recordTypes/FTS.recordType-meta.xml
<RecordType>
    <fullName>FTS</fullName>
    <active>true</active>
    <label>FTS</label>
</RecordType>